--- a/style.scss
+++ b/style.scss
@@ -48,15 +48,18 @@ h1 {
   font-size: 30px;
   a {
     color: inherit;
+	  color: $blue;
   }
 }
 
 h2 {
   font-size: 24px;
+	color: $blue;
 }
 
 h3 {
   font-size: 20px;
+color: $blue;
 }
 
 h4 {
@@ -164,9 +167,9 @@ img {
 }
 
 .site-avatar {
-  float: left;
-  width: 100px;
-  height: 100px;
+  float: center;
+  width: 120px;
+  height: 120px;
   margin-right: 25px;
 
   @include mobile {
