--- a/style.scss
+++ b/style.scss
@@ -167,9 +167,9 @@ img {
 }
 
 .site-avatar {
-  float: center;
-  width: 120px;
-  height: 120px;
+  float: left;
+  width: 33px;
+  height: 44px;
   margin-right: 25px;
 
   @include mobile {
